Codebase/css/styles.css
body {
    height: 100%;
    width: 100%;
    min-width: 750px;
    margin: 0;
    display: flex;
    flex-direction: column;
}

header {
    display: flex;
    justify-content: center;
    align-items: baseline;
}

h1 {
    margin: 0;
    padding-top: 20px;
}

nav {
    display: flex;
    padding: 20px 0;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    list-style-type: none;
}

.button {
    max-height: 30px;
    width: 125px;
    background-color: transparent;
    background-image: linear-gradient(to bottom, #fff, #ddd3c1);
    border: 0 solid #e5e7eb;
    border-radius: 10px;
    color: #482307;
    font-size: 15px;
    font-weight: 700;
    line-height: 24px;
    box-shadow: -6px 8px 10px rgba(81,41,10,0.1),0px 2px 2px rgba(81,41,10,0.2);
}

.button:hover {
    transition-duration: 0.1s;
    opacity: 0.8;
  }

.button:active{
    transform: scale(.90);
}

main {
    display: grid;
    grid-template-columns: 0.5fr 350px 0.5fr;
    grid-template-rows: 400px;
}

section {
    display: flex;
    flex-direction: column;
    justify-content:baseline;
    flex-grow: 1;
    border-radius: 0 0 10px 10px;
}

#players-info {
    display: flex;
    align-items: flex-end;
    margin: 0;
    padding: 50px 30px 50px 0px;
}

.players {
    font-size: 50px;
    margin: 0;
    padding: 10px 0;
}

#game-section {
    border: 10px solid transparent;
    border-image-slice: 20 20 20 20;
    border-image-width: 10px 10px 10px 10px;
    border-image-outset: 0px 0px 0px 0px;
    border-image-repeat: stretch stretch;
    border-image-source: url("../../Images/dark_wood_frame.jpeg");
    box-shadow: inset 0 0 5px #000000;
  }

#response-div {
    padding-top: 5px;
    display: flex;
    position: relative;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 50px;
    border-color: rgb(126, 99, 65);
    box-shadow: 0 4px 6px -6px black;
}

#response-text {
    font-size: 28px;
    color: rgb(0, 0, 0);
    margin: 0;
}

#board-div {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-grow: 1;
    padding: 20px;
}

#board {
    display: grid;
    grid-template-columns: repeat(3, 85px);
    grid-template-rows: repeat(3, 85px);
    gap: 10px;
    
}

.gametile {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: rgb(243, 213, 176);
    font-size: 80px;
    box-shadow: 0 3px 5px #0000007d;
}

.gametile:hover {
    border: #482307 1.5px solid;
    transform: scale(1.075);
}

.gametile:active {
    transform: scale(0.92);
}


.score-tag {
    display: flex;
    justify-content:space-between;
    align-items: center;
    padding-left: 10px;
    background-color: rgb(255, 255, 255);
    min-width: 120px;
    margin: 3% 0px;
    background-image: url("../../Images/dark_wood_frame.jpeg");
    box-shadow: 0 2px 5px #0000007d;
    color: rgb(255, 255, 255);
}

.score-counter {
    display: flex;
    justify-content: center;
    align-items: center;
    color: rgb(255, 255, 255);
    width: 50px;
    height: 50px;
    font-size: 30px;
}

.button-glow {
    animation: glowing 1000ms infinite;
}

@keyframes glowing {
    0% {
      background-color: rgb(196, 171, 141);
      box-shadow: 0 0 10px rgb(196, 171, 141);
    }
    50% {
      background-color: #482307;
      box-shadow: 0 0 25px #482307;
    }
    100% {
      background-color: rgb(196, 171, 141);
      box-shadow: 0 0 10px rgb(196, 171, 141);
    }
}


.side-title {
    text-decoration: underline;
    font-size: 28px;
    font-weight: 400;
    margin: 0;
    padding: 20px 0;
}

.scores {
    align-items: baseline;
    padding: 50px 0px 50px 30px;
}

.score-name-tag {
    font-size: 24px;
    margin: 0;
}

footer {
    display: flex;
    justify-content:end;
    align-items: center;
    margin: 10px 5% 0
}

.no-interactions{
    pointer-events: none;
}

.unmuted {
    position: absolute;
    background-image: url("../../Images/Unmuted.png");
    background-size: contain;
    right: 10px;
    width: 40px;
    height: 40px;
    margin: 0;
}

.unmuted:hover {
    transform: scale(1.1);
}

.muted {
    background-image: url("../../Images/Muted.png");
}

.win-glow { 
    animation: winning 1000ms 3;
}

@keyframes winning {
    50% {font-size: 100px;}
}

@media screen and (max-width:750px) {

    body {
        min-width: 375px;
        min-height: 550px;
    }
    main {
        grid-template-columns: 100%;
        grid-template-rows: auto auto auto;
    }

    nav {
        padding: 10px 0 0 0;
    }

    #players-info {
        padding: 5px 0;
        flex-direction: row;
        justify-content: center;
        align-items: center;
    }

    .side-title {
        padding: 0 3%;
        font-size: 26px;
        display: none;
    }

    .players {
        font-size: 36px;
        padding: 0 10px;
    }

    .scores { 
        padding: 15px 0;
        flex-direction: row;
        justify-content: center;
        align-items: center;
    }

    #response-div {
        height: 40px;
    }

    #response-text {
        font-size: 24px;
    }

    #game-section {
        margin: auto;
    }

    .score-tag  {
        margin: 0 1%;
        padding: 0 7px;
        min-width: 75px;
    }

    .score-name-tag {
        margin-left: 3px;
        font-weight: 300;
    }

    .score-counter {
        font-size: 24px;
        height: 30px;
        width: 30px;
    }

    #board {
        display: grid;
        grid-template-columns: repeat(3, 70px);
        grid-template-rows: repeat(3, 70px);
        gap: 10px;
        
    }
}

